tests/Rules/Aria/Fixtures/valid/tabindex_zero.html.twig
<html>
<body>
<div tabindex="0">Focusable</div>
</body>
</html>
