tests/Rules/Aria/Fixtures/invalid/tabindex_positive.html.twig
{# 1 errors #}
<html>
<body>
<div tabindex="2">Bad focus</div>
</body>
</html>
